	– Custom play button and cover image fetching from youtube turned on by default in TypoScript
	– Dedicated cover title and text fields
* 1.2.1
	– jQuery based breakpoints for cover text and play button location styles depending on video container width
	– Checking available maxres cover image size and fall back to smaller if not present
	– Inline SVG custom play button and CSS controlled colors
	– Constant editor
	– Show cover title and text in back end preview besides the video
* 1.2.2
	– Easier to style and change play button, cover image moved to Partials
	– Play button colour change compatible with ext:microtemplate
* 1.2.3
	– Composer package added, repo moved to github
	– README.rst added
* 1.3.0
	– TYPO3 9.5 compatible only
	– Showinfo removed as deprecated in youtube
	– Add mute parameter if autoplay is on
	– Rename .ts to .typoscript
	- Automatically set language by the site configuration
	- Add breakpoint with vanilla JS if desired, set the constant, jQuery is still default
	- BREAKING!!! – For custom templates and partials! Change render values to variables in TS setup, partials and templates.
	- BREAKING!!! – Custom play button is NOT enabled by default any more. Changed in TS constants. Custom play button and cover makes the users click twice to play the video in some browsers.
* 1.3.1
	– Adding mute if cover image or text is active. Chrome wouldn't play video without it.
	- Fix cover image conflict with image fields in other content types
* 1.4.0
	– TYPO3 10 LTS support
* 1.4.1
	– MySQL strict mode support for start minute and second field, thanks @tgaertner
* 1.4.2
	– TYPO3 11 compatibility
	– Language file from XML to XLF
* 1.4.3
	– README to md format
	– Move ext icons to Resources/Public
* 2.0.0
	- TYPO3 11.5 support only
	- [FEATURE] Cover image crop ratio and automatic selection by video ratio
	- [FEATURE] Cover image user rights
	- [TASK] Remove jQuery setting breakpoint class for video container leaving vanilla only